--- a/css/style.css
+++ b/css/style.css
@@ -447,3 +447,148 @@ body._lock {
 }
 
 /*------------------------------------------------------------------------------------------------------------------*/
+.slider {
+  padding: 20px 0 100px 0;
+}
+.slider__container {
+  position: relative;
+}
+.slider__title {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  margin: 0 0 50px 0;
+}
+@media (max-width: 992px) {
+  .slider__title {
+    font-size: 38px;
+  }
+}
+@media (max-width: 767px) {
+  .slider__title {
+    font-size: 36px;
+  }
+}
+@media (max-width: 480px) {
+  .slider__title {
+    font-size: 34px;
+  }
+}
+.slider__image {
+  text-align: center;
+}
+.slider__image img {
+  max-width: 100%;
+}
+
+/*------------------------------------------------------------------------------------------------------------------*/
+.footer__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media (max-width: 480px) {
+  .footer__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.footer__top-tel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 0 0 30px 0;
+}
+@media (max-width: 480px) {
+  .footer__top-tel {
+    font-size: 22px;
+  }
+}
+.footer__top-tel a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 10px 0 0 0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  text-decoration: underline;
+}
+.footer__top-tel a:hover {
+  color: #667178;
+}
+@media (max-width: 480px) {
+  .footer__top-tel a {
+    font-size: 18px;
+  }
+}
+.footer__top-email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 0 0 20px 0;
+}
+@media (max-width: 480px) {
+  .footer__top-email {
+    font-size: 22px;
+  }
+}
+.footer__top-email a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 10px 0 0 0;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  text-decoration: underline;
+}
+.footer__top-email a:hover {
+  color: #667178;
+}
+@media (max-width: 480px) {
+  .footer__top-email a {
+    font-size: 18px;
+  }
+}
+.footer__top-social {
+  margin: 0 20px 0 0;
+}
+@media (max-width: 480px) {
+  .footer__top-social {
+    margin: 0;
+  }
+}
+.footer__bottom {
+  padding: 50px 0 20px 0;
+}
+.footer__bottom-text {
+  font-size: 17px;
+  text-align: center;
+}
+@media (max-width: 480px) {
+  .footer__bottom-text {
+    font-size: 15px;
+  }
+}
+
+/*------------------------------------------------------------------------------------------------------------------*/
